<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/article_photo"
                android:layout_width="match_parent"
                android:layout_height="219dp"
                android:maxHeight="219dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/article_image" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/save"
                />
<!--note: don't work with px - use dp-->

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/like"
                />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/like"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:paddingEnd="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/article_photo"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title"/>

            <ImageView
                android:id="@+id/author_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/article_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/author_image" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:layout_below="@+id/article_title"
                android:layout_toEndOf="@+id/author_avatar"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/article_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="17sp"
                android:layout_below="@+id/author_name"
                android:layout_toEndOf="@+id/author_avatar"
                android:text="@string/category"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>